name:                siren
version:             0.1.0.0
synopsis:            Siren Tools for Haskell

description:         
  Types, classes, and functions for using the Siren—Hypermedia Type in Haskell.

homepage:            https://github.com/alunduil/siren
bug-reports:         https://github.com/alunduil/siren/issues
license:             MIT
license-file:        LICENSE
author:              Alex Brandt
maintainer:          alunduil@alunduil.com
copyright:           (c) 2017 Alex Brandt
category:            Data
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC >= 7.6 && < 9.0

extra-source-files:
    ChangeLog.md
  , COPYRIGHT
  , LICENSE
  , REAMDE.md
  , Setup.hs

source-repository head
  type:     git
  location: https://github.com/alunduil/siren
  branch:   develop

library
  default-language:    Haskell2010

  ghc-options: -Wall -fwarn-tabs -fwarn-monomorphism-restriction
               -fwarn-unused-do-bind

  hs-source-dirs:
      src

  exposed-modules:
      Data.SirenJSON

  other-modules:
      Internal.Network.URI

  build-depends:
      aeson       >= 0.8 && < 1.2
    , base        >= 4.6 && < 4.12
    , network-uri == 2.6.*
    , text        == 1.2.*

  other-extensions:

test-suite siren-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs

  ghc-options: -Wall -fwarn-tabs -fwarn-monomorphism-restriction
               -fwarn-unused-do-bind

  hs-source-dirs:
      src
    , test

  other-modules:
      Data.SirenJSON
    , Data.SirenJSON.Arbitrary
    , Data.SirenJSONSpec

    , Internal.Network.URI
    , Internal.Network.URI.Arbitrary
    , Internal.Network.URISpec

  build-tool-depends:
      hspec-discover:hspec-discover == 2.4.*

  build-depends:
      aeson                >= 0.8 && < 1.2
    , base                 >= 4.6 && < 4.12
    , bytestring           == 0.10.*
    , hspec                == 2.4.*
    , network-uri          == 2.6.*
    , QuickCheck           == 2.9.*
    , quickcheck-instances == 0.3.*
    , test-invariant       == 0.4.*
    , text                 == 1.2.*

  other-extensions:
